# libfabric_practice

./: .gitignore  CMakeLists.txt  README.md
libfabric_practice/: main.cpp
libfabric_practice/client/: main.cpp
libfabric_practice/client/include/: net.hpp
libfabric_practice/client/src/: net.cpp
libfabric_practice/include/: net.hpp
libfabric_practice/lib/include/: debugger.hpp  err.hpp
libfabric_practice/lib/src/: err.cpp
libfabric_practice/server/: main.cpp
libfabric_practice/server/include/: net.hpp
libfabric_practice/server/src/: net.cpp
libfabric_practice/src/: net.cpp
